tests/ui/async-await/async-fn/recurse-ice-129215.rs
//@ edition: 2021

async fn a() {
    //~^ ERROR `()` is not a future
    //~| ERROR mismatched types
    a() //~ ERROR `()` is not a future
}

fn main() {}
